--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   redis:
-    image: redis:alpine
+    image: redis:6.2-alpine
     command: --port 6000
     container_name: redis
     restart: unless-stopped
