--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   redis:
     image: redis:6.2-alpine
@@ -14,7 +13,7 @@ services:
     build: .
     restart: unless-stopped
     ports:
-      - "8000:8080"
+      - 8000:${APP_PORT}
     volumes:
       - ${DB_PATH}:/ao3_web_reader/database
       - ${LOGS_PATH}:/ao3_web_reader/logs
