--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 services:
   redis:
     command: --port 6000
-    image: redis:alpine
+    image: redis:6.2-alpine
     container_name: redis
     restart: "no"
     ports:
