--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-WTF==1.2.2
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
+SQLAlchemy==2.0.36
+alembic==1.13.3
 gunicorn==23.0.0
 requests==2.32.3
 beautifulsoup4==4.12.3
