--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ services:
   redis:
     command: --port 6000
     image: redis:6.2-alpine
-    container_name: redis
+    container_name: ao3_web_reader_dev_redis
     restart: "no"
     ports:
       - "6000:6000"
