--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   redis:
     image: redis:6.2-alpine
     command: --port 6000
-    container_name: redis
+    container_name: ao3_web_reader_redis
     restart: unless-stopped
 
   app:
