--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,7 @@ REDIS_SERVER_PORT=6000
 WORKS_UPDATER_INTERVAL=7200
 DB_PATH=
 LOGS_PATH=
+STYLES_LIBS_FROM_CDN=0
 DEBUG=0
 HTTPS_ONLY=1
 APP_PORT=80
