refactor: replaced redis with whimdb

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-REDIS_SERVER_ADDRESS=redis
-REDIS_SERVER_PORT=6000
+WHIMDB_SERVER_ADDRESS=whimdb
+WHIMDB_SERVER_PORT=6000
 WORKS_UPDATER_INTERVAL=7200
 DB_PATH=
 LOGS_PATH=
