--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 services:
-  redis:
-    image: redis:6.2-alpine
-    command: --port 6000
-    container_name: ao3_web_reader_redis
+  whimdb:
+    command: whimdb-server --port 6000
+    container_name: ao3_web_reader_whimdb
     restart: unless-stopped
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.whimdb
 
   app:
     depends_on:
-      - redis
+      - whimdb
     container_name: ao3_web_reader
     command: /bin/sh -c "/ao3_web_reader/scripts/entrypoint.sh"
     build:
@@ -24,7 +26,7 @@ services:
 
   tasks:
     depends_on:
-      - redis
+      - whimdb
       - app
     container_name: ao3_web_reader_tasks
     command: /bin/sh -c "/ao3_web_reader/scripts/run_background_tasks.sh"
